--- a/index.html
+++ b/index.html
@@ -1055,19 +1055,11 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="social-links">
-			<a href="https://github.com/mickaellherminez" class="social-link" target="_blank" rel="noopener">
+			<a href="https://github.com/04312581464" class="social-link" target="_blank" rel="noopener">
 				<span>👨‍💻</span> GitHub
 			</a>
-			<a href="https://www.linkedin.com/in/mickaellherminez" class="social-link" target="_blank" rel="noopener">
-				<span>💼</span> LinkedIn
 			</a>
-			<a href="https://twitter.com/mickaelherminez" class="social-link" target="_blank" rel="noopener">
-				<span>🐦</span> Twitter
-			</a>
-			<a href="https://bsky.app/profile/mickaellherminez.bsky.social" class="social-link" target="_blank" rel="noopener">
-				<span>🦋</span> Bluesky
-			</a>
-			<a href="https://codepen.io/mickaellherminez" class="social-link" target="_blank" rel="noopener">
+			<a href="https://codepen.io/lalit_6831" class="social-link" target="_blank" rel="noopener">
 				<span>✨</span> CodePen
 			</a>
 		</div>
